--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "classnames": "^2.3.2",
+    "genius-lyrics-api": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.10.0",
