--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
+    "@types/react-toastify": "^4.1.0",
     "classnames": "^2.3.2",
     "genius-lyrics-api": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "react-youtube": "^10.1.0",
-    "typescript": "^4.2.4",
+    "typescript": "^5.0.4",
     "typescript-eslint-parser": "^22.0.0",
     "web-vitals": "^1.1.1"
   },
@@ -50,6 +52,7 @@
   },
   "devDependencies": {
     "@mate-academy/eslint-config-react-typescript": "^0.0.4",
+    "@types/howler": "^2.2.7",
     "eslint": "^7.25.0",
     "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0"
